--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Push to Docker hub
         uses: docker/build-push-action@v1
         with:
-          file: docker/Dockerfile
+          dockerfile: docker/Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           add_git_labels: true
